refactor: 清理冗余代码与文本块现代化
删除未使用的 record 类与废弃接口方法，使用 Java 文本块重构多行字符串，以 Lombok 注解替换手写 getter/setter，并简化文件写入与正则表达式等 API 调用。